crates/pipdock-cli/tests/snapshots/golden__error-envelope-human.snap
---
source: crates/pipdock-cli/tests/golden.rs
expression: err
---
error[PD-ENV-001]: no interpreter at C:/definitely/not/here
