crates/pipdock-cli/tests/snapshots/golden__error-envelope-json.snap
---
source: crates/pipdock-cli/tests/golden.rs
expression: out
---
{"code":"PD-ENV-001","message":"no interpreter at C:/definitely/not/here","stderrTail":null}
